--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
+    "lucide-react": "^0.518.0",
     "next": "15.3.3",
     "postprocessing": "^6.37.4",
     "react": "^19.1.0",
